fix: migrations moved to different directory, added new apis and many other changes
